www/sites/all/themes/lynchburg/css/global.css
/* ... */
form.normal input[type="submit"]:hover {
	background: rgb(242,242,242); /* Old browsers */
	background: -moz-linear-gradient(top,  rgba(242,242,242,1) 3%, rgba(244,244,244,1) 98%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(3%,rgba(242,242,242,1)), color-stop(98%,rgba(244,244,244,1))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  rgba(242,242,242,1) 3%,rgba(244,244,244,1) 98%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  rgba(242,242,242,1) 3%,rgba(244,244,244,1) 98%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  rgba(242,242,242,1) 3%,rgba(244,244,244,1) 98%); /* IE10+ */
	background: linear-gradient(top,  rgba(242,242,242,1) 3%,rgba(244,244,244,1) 98%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
}


/* ========== NOTIFICATIONS ========== */
.info, .warnings, .errors, .success {
	border:1px solid #d7d7d7;
	font-size:12px;;
	margin-bottom:10px;
	padding:20px 60px 20px 20px;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	min-height:60px;
	/*background: url(../images/notifications.png) repeat-x scroll 0 0 #efeded;*/
	/* for non-css3 browsers */
	background: #d9d9d9;
	/* for IE */
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f4f4', endColorstr='#ecebeb');
	/* for webkit browsers */
	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f5f4f4), to(#ecebeb), color-stop(.6, #ecebeb));
	/* for firefox 3.6+ */
	background: -moz-linear-gradient(25% 87% 90deg, #ecebeb, #ecebeb, #f5f4f4 100%);/*background-position: 0 0;*/
}
.info:hover, .warnings:hover, .errors:hover, .success:hover {
	/*background-position: 0 -150px;	*/
	/* for non-css3 browsers */
	background: #e9e9e9;
	/* for IE */
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ecebeb', endColorstr='#f5f4f4');
	/* for webkit browsers */
	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ecebeb), to(#f0f0f0), color-stop(.6, #ecebeb));
	/* for firefox 3.6+ */
	background: -moz-linear-gradient(25% 87% 90deg, #f5f4f4, #ecebeb, #ecebeb 100%);/*background-position: 0 0;*/
}
.info img, .warnings img, .errors img, .success img {
	float:left;
	margin-right:20px;
}
.info p, .warnings p, .errosr p, .success p {
	padding:0;
	margin:0;
	display:table;
	overflow:hidden;
}
.info {color:#3cb4e4;}
.warnings {color:#ff9c00;}
.errors {color:#f76565;}
.success {color:#75bc16;}


/* ----- Pagination ----- */
.wp-pagenavi {
	margin-top:30px;
	overflow:hidden;
}
.wp-pagenavi ul {
	margin:0;
	padding:0;
	list-style:none;
}
.wp-pagenavi li {
	margin:0;
	padding:0;
	float:left;
	line-height:25px;
	background:none;
}
.wp-pagenavi li.page {
	margin-right:13px;
}
.wp-pagenavi span.current-page {
	display:none;
	float:left;
	margin:0 10px 0 0;
}
.wp-pagenavi a, .wp-pagenavi span {
	width:auto;
	height:12px;
	display:block;
	float:left;
	border:1px solid #d2d2d2;
	padding:0 10px;
	height:23px;
	line-height:23px;
	text-align:center;
	margin-right:3px;
	color:#858585;
	text-decoration:none;
	-moz-border-radius:5px;
	border-radius:5px;
	-webkit-border-radius:5px;
	position:relative;
	behavior: url(js/PIE.htc);
}
.wp-pagenavi span.extend {
	border:0;
}
.wp-pagenavi a, .wp-pagenavi a.page {
	color:#858585;
	text-shadow:#fdfdfd 1px 1px 0;
	background:url(../images/bg_pagenavi.png) repeat-x;
	-moz-box-shadow:0 2px 2px rgba(228,228,228,1);
	-webkit-box-shadow:0 2px 2px rgba(228,228,228,1);
	box-shadow:0 2px 2px rgba(228,228,228,1);
	position:relative;
	behavior: url("js/PIE.htc");
}
.wp-pagenavi a:hover, .wp-pagenavi a:hover.page, .wp-pagenavi a.nextpostslink:hover, .wp-pagenavi span.current, .comments-navigation a:hover, .wp-pagenavi a:hover.first, .wp-pagenavi a:hover.last, .comments-navigation a:hover {
	color:#636363;
	background-position:0 -23px;
	text-decoration:none;
}
.wp-pagenavi span.current {
	font-size:1em;
	color:#636363;
	text-shadow:#fdfdfd 1px 1px 0;
	background:url("../images/bg_pagenavi.png") repeat-x 0 -23px;
	-moz-box-shadow:0 2px 2px rgba(228,228,228,1);
	-webkit-box-shadow:0 2px 2px rgba(228,228,228,1);
	box-shadow:0 2px 2px rgba(228,228,228,1);
	position:relative;
	behavior: url("js/PIE.htc");
}
.wp-pagenavi a.first, .wp-pagenavi a.last, .wp-pagenavi a.previouspostslink, .wp-pagenavi a.nextpostslink {
	font-size:1em;
	color:#636363;
	text-shadow:#fdfdfd 1px 1px 0;
	background:url("../images/bg_pagenavi.png") repeat-x 0 0;
	-moz-box-shadow:0 2px 2px rgba(228,228,228,1);
	-webkit-box-shadow:0 2px 2px rgba(228,228,228,1);
	box-shadow:0 2px 2px rgba(228,228,228,1);
	text-indent:-9999px;
	position:relative;
	behavior: url(js/PIE.htc);
}
.wp-pagenavi a.nextpostslink em {
	background:url("../images/nextpostlink.png") no-repeat 2px center;
	display:block;
	height:23px;
	width:6px
}

/***************************
 * specific misc   *
 ***************************/
.field-name-field-date {
	margin-bottom:15px;
	font-style:italic;
} 
 

 
/*************************
 *  footer area  top        *
 *************************/

.pane-footer-bar-left ul, .pane-footer-bar-right ul {
	font-size:14px;
}
.pane-footer-bar-left li, .pane-footer-bar-right li {
	float:left;
	padding:10px 0px 0px 0px;
}
 .pane-footer-bar-right li {
	float:left;
	padding-right:12px;
}
.pane-footer-bar-left li a, .pane-footer-bar-right li a {
	padding:10px;
}
#give a, #newsevents a, #facstaff a, #follow-us a, #facebook a, #twitter a, #youtube a, #flickr a, #blog a {
	display:inline-block;
	text-indent:-9999px;
}


/*social media icons*/
#facebook a, #twitter a, #youtube a, #flickr a, #blog a {
	width:20px;
}
/*give*/
#give {
	margin-left:0px;
	padding-left:0px;
}
#give a {
	background:url("../images/giveIcon.png") no-repeat left;
	padding-left:25px;
	padding-right:40px;
	border-right:#56585b solid 2px;
	text-indent:0px;
	text-align:center;
	color:#fff;
}
/* ... */

